# paula-gen-FD

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  LICENSE-DATA  README.md  pyproject.toml
.github/workflows/: pages.yml  validate.yml
docs/: APPARATUS.md  DATA_FORMAT.md  LOGBOOK.md  SOURCES.md  STATE_OF_THE_TWIN.md  build_site.py  index.html  schema.md
docs/decisions/: 0001-record-format-yaml.md  0002-source-pdfs-out-of-vcs.md  0003-licensing-cc-by-and-mit.md  README.md  (+5 more)
records/: beams.yaml  control.yaml  fields.yaml  ions.yaml
registries/: configuration_slots.yaml  generations.yaml  sources.yaml
schema/: configuration_slots.schema.json  generations.schema.json  record.schema.json  sources.schema.json
spike/: README.md  __init__.py  analyze_data.py  bootstrap.py  constants.py  datfile.py  ledger.py  linalg.py  plot_scans.py  plot_tickle.py  runner.py  test_acstark.py  test_aom_rise.py  test_apparatus_doc.py  test_bootstrap.py  test_cooling.py  test_datfile.py  test_detection.py  test_drive.py  test_grating_tomography.py  test_levels.py  test_modes.py  test_plot_scans.py  test_projection.py  test_rabi.py  test_raman_dephasing.py  test_raman_optical.py  test_readout.py  test_runner.py  test_scatter.py  test_sideband.py  test_sideband_cooling.py  test_spin.py  test_strobo_sim.py  test_tickle.py  test_twin.py  test_twin_oc_flop.py  test_twin_sideband.py  test_twin_strobo.py  test_twin_wigner_tomography.py  (+9 more)
task card/: iontrap-reference-task-card.md
tools/: gen_apparatus.py
validator/: __init__.py  test_validate.py  validate.py
(+34 files in other folders)
