[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "iontrap-reference-validator"
version = "0.1.0"
description = "Schema + graph-invariant validator for the iontrap-reference parameter substrate"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Ulrich Warring" }]
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.18",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pre-commit>=3.0", "matplotlib>=3.5"]

[project.scripts]
iontrap-validate = "validator.validate:main_cli"

[tool.setuptools]
packages = ["validator", "spike", "spike.engines"]

[tool.pytest.ini_options]
testpaths = ["validator", "spike"]
